Primeiro component usando bootstrap

--- a/src/app/painel-simples/painel-simples.component.html
+++ b/src/app/painel-simples/painel-simples.component.html
@@ -1,3 +1,8 @@
-<p>
-  painel-simples works!
-</p>
+<div class="col-sm-{{col}}">
+  <div class="card">
+    <h3 class="card-header {{tipo}}">{{titulo}}</h3>
+    <div class="card-body">
+      <ng-content></ng-content>
+    </div>
+  </div>
+</div>
