--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-painel-simples></app-painel-simples>
+<app-painel-simples  titulo="Consultas Marcadas Últimos 30 dias" col="6" tipo="bg-info">
+    <h3 class="text-center">120</h3>
+</app-painel-simples>
 
