--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-<app-painel-simples  titulo="Consultas Marcadas Últimos 30 dias" col="6" tipo="bg-info">
-    <h3 class="text-center">120</h3>
-</app-painel-simples>
+<app-barra-navegacao></app-barra-navegacao>
+
+<div class="main">
+    <app-barra-lateral></app-barra-lateral>
+    <div class="content">
+        <app-painel-simples  titulo="Consultas Marcadas Últimos 30 dias" col="6" tipo="info">
+            <h3 class="text-center">120</h3>
+        </app-painel-simples>
+    </div>
+</div>
 
