Criação de rotas e página de consultas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,7 @@
 <div class="main">
     <app-barra-lateral></app-barra-lateral>
     <div class="content">
-        <app-painel-simples  titulo="Consultas Marcadas Últimos 30 dias" col="6" tipo="info">
-            <h3 class="text-center">120</h3>
-        </app-painel-simples>
+        <router-outlet></router-outlet>
     </div>
 </div>
 
